--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -54,6 +54,7 @@ html{
     .layui-nav-item a i{
       margin-right: 10px;
       font-size: 1.4rem;
+      width: 20px;
     }
     .layui-nav-tree .layui-nav-child a {
         height: @40px;
