修复样式错误，修改IE8支持问题（未完全解决），变更list，修改其他一些小问题

--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -140,7 +140,7 @@ html{
     }
     .menu-btn {
         float: left;
-        width: @num;
+        width: 70px;
         height: @num;
         line-height: 60px;
         text-align: center;
