完善页面，添加数据，修改文件夹布局

--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -432,6 +432,26 @@ html{
   font-size:1.8rem!important;
 }
 
+#tips {
+  position: fixed;
+  left: 40%;
+  top: 50%;
+  background: rgba(0, 0, 0, 0.75);
+  color: #fff;
+  min-width: 150px;
+  padding: 10px;
+  border-radius: 10px;
+  display:none;
+}
+
+.tip_title {
+  width: 60px;
+}
+
+.tip_conts {
+  width: auto;
+}
+
 @media (max-width: 768px) {
   .main-layout-side{
     position: fixed;
