fixed bugs 重构frams_all函数，更便于对表格操作

--- a/static/admin/css/admin.css
+++ b/static/admin/css/admin.css
@@ -2033,6 +2033,9 @@ html {
 .tip_conts {
   width: auto;
 }
+#moreBar {
+  margin-top: 5px;
+}
 @media (max-width: 768px) {
   .main-layout-side {
     position: fixed;
