--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -452,6 +452,10 @@ html{
   width: auto;
 }
 
+#moreBar{
+  margin-top:5px;
+}
+
 @media (max-width: 768px) {
   .main-layout-side{
     position: fixed;
