--- a/static/admin/css/admin.css
+++ b/static/admin/css/admin.css
@@ -1610,7 +1610,7 @@ html {
   top: 2px;
 }
 .main-layout-side .layui-nav-itemed > a {
-  background: #089ce2 !important;
+  background: #4E5465;
 }
 .main-layout-side .layui-nav-item a i {
   margin-right: 10px;
@@ -1641,8 +1641,7 @@ html {
   background-color: #089ce2;
 }
 .main-layout-side .layui-nav-tree .layui-nav-child .layui-this > a {
-  background-color: #56595a;
-  color: #00b5f9;
+  background-color: #4E5465;
 }
 .main-layout-side .layui-nav-tree .layui-this > a {
   background-color: rgba(0, 181, 249, 0.8);
@@ -1684,6 +1683,7 @@ html {
   width: 100%;
   height: 100%;
   display: block;
+  padding: 0!important;
 }
 .menu-btn1 span {
   font-size: 1.8rem !important;
@@ -1749,7 +1749,8 @@ html {
   color: #00b5f9;
 }
 .main-layout-header .layui-nav .layui-nav-bar {
-  display: none;
+  height: 2px;
+  background-color: #177fea;
 }
 .main-layout-header .layui-nav .layui-this:after {
   height: 0;
@@ -2036,6 +2037,16 @@ html {
 #moreBar {
   margin-top: 5px;
 }
+.sign {
+  color: red;
+  margin-left: 5px;
+}
+.layui-field-title {
+  margin-top: 20px;
+}
+.layui-tab-content {
+  padding: 0!important;
+}
 @media (max-width: 768px) {
   .main-layout-side {
     position: fixed;
@@ -2096,6 +2107,11 @@ html {
     width: 100px;
     bottom: 5px;
     right: 5px;
+  }
+  .layui-table-page > div {
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 36px!important;
   }
 }
 .email-wrap {
