全生命页面添加

--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -471,6 +471,27 @@ html{
   padding:0!important;
 }
 
+.subBtn{
+  width: 180px;
+  margin: 25px auto;
+}
+.subBtn>div{
+  margin:0!important;
+}
+
+.input_area{
+  min-height:38px;
+  max-height:100px;
+}
+
+.layui-input-block button{
+  margin: 7px 10px;
+}
+
+.mini_select input{
+  width:60px;
+  height:30px;
+}
 @media (max-width: 768px) {
   .main-layout-side{
     position: fixed;
