--- a/static/admin/css/admin.css
+++ b/static/admin/css/admin.css
@@ -2047,6 +2047,24 @@ html {
 .layui-tab-content {
   padding: 0!important;
 }
+.subBtn {
+  width: 180px;
+  margin: 25px auto;
+}
+.subBtn > div {
+  margin: 0!important;
+}
+.input_area {
+  min-height: 38px;
+  max-height: 100px;
+}
+.layui-input-block button {
+  margin: 7px 10px;
+}
+.mini_select input {
+  width: 60px;
+  height: 30px;
+}
 @media (max-width: 768px) {
   .main-layout-side {
     position: fixed;
