全生命页面添加

--- a/static/admin/css/admin.css
+++ b/static/admin/css/admin.css
@@ -2065,6 +2065,9 @@ html {
   width: 60px;
   height: 30px;
 }
+.layui-colla-content {
+  overflow: hidden;
+}
 @media (max-width: 768px) {
   .main-layout-side {
     position: fixed;
