--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -492,6 +492,10 @@ html{
   width:60px;
   height:30px;
 }
+
+.layui-colla-content{
+  overflow: hidden;
+}
 @media (max-width: 768px) {
   .main-layout-side{
     position: fixed;
