补全全生命页面，增加新类型页面（bill）

--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -455,8 +455,8 @@ html{
   width: auto;
 }
 
-#moreBar{
-  margin-top:5px;
+.addBtn{
+  margin-bottom:5px;
 }
 
 .sign{
@@ -496,6 +496,28 @@ html{
 .layui-colla-content{
   overflow: hidden;
 }
+
+.layui-field-title{
+  margin-top:20px;
+}
+
+.hidden{
+  display: none;
+}
+
+.showBlock{
+  display: block;
+}
+
+.showInline{
+  display: inline;
+}
+
+.padRight .layui-table-tool-temp{
+  padding-right: 0;
+}
+
+
 @media (max-width: 768px) {
   .main-layout-side{
     position: fixed;
@@ -560,5 +582,14 @@ html{
     overflow-x: auto;
     overflow-y: hidden;
     height: 36px!important;
+  }
+  .xs-100{
+    width:100%!important;
+  }
+  .mar10-0{
+    margin:10px 0!important;
+  }
+  .pad0-10{
+    padding: 0 10px!important;
   }
 }
