--- a/static/admin/css/admin.css
+++ b/static/admin/css/admin.css
@@ -2034,8 +2034,8 @@ html {
 .tip_conts {
   width: auto;
 }
-#moreBar {
-  margin-top: 5px;
+.addBtn {
+  margin-bottom: 5px;
 }
 .sign {
   color: red;
@@ -2067,6 +2067,21 @@ html {
 }
 .layui-colla-content {
   overflow: hidden;
+}
+.layui-field-title {
+  margin-top: 20px;
+}
+.hidden {
+  display: none;
+}
+.showBlock {
+  display: block;
+}
+.showInline {
+  display: inline;
+}
+.padRight .layui-table-tool-temp {
+  padding-right: 0;
 }
 @media (max-width: 768px) {
   .main-layout-side {
@@ -2133,6 +2148,15 @@ html {
     overflow-x: auto;
     overflow-y: hidden;
     height: 36px!important;
+  }
+  .xs-100 {
+    width: 100%!important;
+  }
+  .mar10-0 {
+    margin: 10px 0!important;
+  }
+  .pad0-10 {
+    padding: 0 10px!important;
   }
 }
 .email-wrap {
