--- a/static/admin/less/main.less
+++ b/static/admin/less/main.less
@@ -517,6 +517,12 @@ html{
   padding-right: 0;
 }
 
+.layui-layer-shade{
+  z-index: 666!important;
+}
+.layui-layer-page .hidden-xs{
+  display: block!important;
+}
 
 @media (max-width: 768px) {
   .main-layout-side{
